# nodeJS-addon-example

./: .clang-format  .gitignore  .prettierrc  CMakeLists.txt  CONTRIBUTORS  README.md  docker-compose.yaml  dockerfile  package-lock.json  package.json
.github/workflows/: docker-image.yml  dockerbuild.yml
config/: webpack.common.js  webpack.prod.js
public/: index.html  script.js  style.css
scripts/: install.js
src/: index.ts  main.cpp
src/api/: index.js
src/bindings/: index.d.ts  index.js
src/bindings/types/: Utils.d.ts
src/classifier/: ImageData.cpp  ImageData.h  classifier.cpp
src/cvtypes/: Mat.h  MatFloat.h  MatImage.h  MatInt.cpp
src/extras/: napiextra.h  ndarray.h
src/io/: OutputUtils.cpp  OutputUtils.h
src/jserrors/: JSErrors.h
src/logger/: logger.ts
src/modules/classifier/: classifier.h  resnet.h
src/modules/cvtypes/: Mat.cpp  MatFloat.cpp  MatInt.h
src/routes/: classify.ts
